# azure-databricks-earthquake-etl

./: .gitignore  Dockerfile  Makefile  PORTFOLIO_EVIDENCE.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
notebooks/: 01_bronze_ingestion.py  02_silver_transform.py  03_gold_analytics.py  bronze_ingestion.py  debug_test.py  etl_minimal.py  etl_pipeline_complete.py  gold_analytics.py  silver_cleaning.py
src/: bronze.py  gold.py  quality.py  silver.py  utils.py
tests/: test_bronze.py  test_quality.py  test_silver.py
