[project]
name = "azure-databricks-earthquake-etl"
version = "2.0.0"
description = "Medallion architecture ETL pipeline: USGS earthquake data → Bronze → Silver → Gold (Databricks Community Edition)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["F821", "E402", "F401"]
"notebooks/*.py" = ["F821", "E402", "F401"]